@@ -1,3 +1,7 @@
+2013-11-11  Joern Rennecke  <joern.rennecke@embecosm.com>
+
+	* config/arc/arc.h (LOGICAL_OP_NON_SHORT_CIRCUIT): Define.
+
 2013-11-08  Jeff Law  <law@redhat.com>
 
 	* tree-ssa-threadupdate.c (mark_threaded_blocks): Truncate jump
